Horizontal Scroll Fix

--- a/ui/src/app/components/object-explorer/object-explorer.component.scss
+++ b/ui/src/app/components/object-explorer/object-explorer.component.scss
@@ -38,9 +38,12 @@
 .selected-row {
   background-color: #61b3ff4a;
 }
+
 .explorer-table {
   height: calc(100vh - 320px);
   overflow-y: auto;
+  overflow-x: hidden;
+  box-sizing: border-box;
 }
 
 .mat-table {
